--- a/peft/whisper_eval.ipynb
+++ b/peft/whisper_eval.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1b5a62f2-1079-4f06-8afc-9135db361d4d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b5437e5f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9d652f56",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6c638814-d20b-4af9-b9c4-09f76ba1b631",
    "metadata": {
     "collapsed": true,
@@ -147,7 +147,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "24a1d9e4-e243-46e4-bff5-8d51ab302d21",
    "metadata": {
     "collapsed": true,
@@ -315,7 +315,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cdb02d5f-07f5-4ef1-87cb-0c81925bf586",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "95ad5926",
    "metadata": {},
    "outputs": [],
@@ -376,22 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "7075b8dd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Audio' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m common_voice \u001b[38;5;241m=\u001b[39m common_voice\u001b[38;5;241m.\u001b[39mcast_column(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maudio\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mAudio\u001b[49m(sampling_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m16000\u001b[39m))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# common_voice[\"test\"][0]\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Audio' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import Audio\n",
     "common_voice = common_voice.cast_column(\"audio\", Audio(sampling_rate=16000))\n",
@@ -401,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2a0f0d3f-71d5-4cae-8230-70b1fb4548d8",
    "metadata": {},
    "outputs": [],
@@ -415,19 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "be3d5a3c-d498-4250-a590-ccd51e9b03f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "small_common_voice = DatasetDict()\n",
     "\n",
-    "small_common_voice[\"test\"] = common_voice[\"test\"].shuffle(seed=16).select(range(320))"
+    "# small_common_voice[\"test\"] = common_voice[\"test\"].shuffle(seed=16).select(range(320))\n",
+    "small_common_voice[\"test\"] = common_voice[\"test\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7c4e47ac-2001-47c0-a53a-9490c94bc784",
    "metadata": {},
    "outputs": [],
@@ -445,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f2aa0d9e-8ca7-47ed-8856-cebce1d93c65",
    "metadata": {},
    "outputs": [],
@@ -496,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3e774b45-69a9-4f95-938d-e3284ff6060f",
    "metadata": {},
    "outputs": [],
@@ -509,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "6e5c0c9d-5ccd-4770-9cfc-78e51c956baa",
    "metadata": {},
    "outputs": [],
@@ -524,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e1371372-b803-4cb0-96a2-110df3d52541",
    "metadata": {},
    "outputs": [
@@ -532,9 +521,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]/root/miniconda3/lib/python3.11/site-packages/bitsandbytes/autograd/_functions.py:322: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  0%|          | 0/662 [00:00<?, ?it/s]Due to a bug fix in https://github.com/huggingface/transformers/pull/28687 transcription using a multilingual Whisper will default to language detection followed by transcription instead of translation to English.This might be a breaking change for your use case. If you want to instead always translate your audio to English, make sure to pass `language='en'`.\n",
+      "/root/miniconda3/lib/python3.12/site-packages/bitsandbytes/autograd/_functions.py:316: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
       "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
-      "100%|██████████| 20/20 [05:25<00:00, 16.26s/it]\n"
+      "100%|██████████| 662/662 [1:31:38<00:00,  8.31s/it]\n"
      ]
     }
    ],
@@ -583,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d2276bf1-1ab3-453c-9c7a-93486b829332",
    "metadata": {},
    "outputs": [
@@ -591,7 +581,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wer=70.0%\n"
+      "wer=58.11755811755812%\n"
      ]
     }
    ],
