--- a/peft/peft_lora_whisper-large-v2-full-scale.ipynb
+++ b/peft/peft_lora_whisper-large-v2-full-scale.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "ccd00402-d821-485e-8703-fb16bcb56a9e",
    "metadata": {
     "execution": {
@@ -124,7 +124,7 @@
     "task = \"transcribe\"\n",
     "dataset_name = \"mozilla-foundation/common_voice_11_0\"\n",
     "\n",
-    "batch_size=64"
+    "batch_size=32"
    ]
   },
   {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f2e8e020",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9bed4735-d485-435f-b282-2806241e0e54",
    "metadata": {
     "execution": {
@@ -212,7 +212,7 @@
        "})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c4889a35",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
        " 'segment': ''}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5822025f-7f8e-4141-8bfe-d8822d0da20f",
    "metadata": {
     "execution": {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1690dc5a-c1f7-4556-9be3-d31ad888e52e",
    "metadata": {
     "execution": {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "309aff16-ea26-4474-af54-7ef244783999",
    "metadata": {
     "execution": {
@@ -348,7 +348,7 @@
        " 'sentence': '性喜温暖润湿气候且耐寒。'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5fc451cc-e21e-473c-a702-d7d6ed098f91",
    "metadata": {
     "execution": {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cc3d7fcc-7c34-41c8-9857-5a6e883f6115",
    "metadata": {
     "execution": {
@@ -415,7 +415,7 @@
        " 'sentence': '性喜温暖润湿气候且耐寒。'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "58f42c35-35ba-4d6b-9d15-095963cec67c",
    "metadata": {
     "execution": {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "28b14693-aa42-4f13-a537-66b5c4cb4718",
    "metadata": {
     "execution": {
@@ -497,13 +497,16 @@
    "source": [
     "small_common_voice = DatasetDict()\n",
     "\n",
-    "small_common_voice[\"train\"] = common_voice[\"train\"].shuffle(seed=16).select(range(29056))\n",
-    "small_common_voice[\"validation\"] = common_voice[\"validation\"].shuffle(seed=16).select(range(10581))"
+    "# small_common_voice[\"train\"] = common_voice[\"train\"].shuffle(seed=16).select(range(29056))\n",
+    "# small_common_voice[\"validation\"] = common_voice[\"validation\"].shuffle(seed=16).select(range(10581))\n",
+    "\n",
+    "small_common_voice[\"train\"] = common_voice[\"train\"]\n",
+    "small_common_voice[\"validation\"] = common_voice[\"validation\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "46b6a10b-81a9-428d-8130-4c2b626f3ba3",
    "metadata": {
     "execution": {
@@ -529,13 +532,37 @@
        "})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "small_common_voice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3b60d815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['audio', 'sentence'],\n",
+       "    num_rows: 29056\n",
+       "})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_common_voice[\"train\"]"
    ]
   },
   {
@@ -548,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "392f7856-a720-40a7-af7e-40e185fc315b",
    "metadata": {
     "execution": {
@@ -562,7 +589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd91fa0dd9a24bcdaed238344573e6b6",
+       "model_id": "a6f10c787e9d465bae4a95c5e005418a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -576,7 +603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "282036480843481ca1cbd50aaa780f8e",
+       "model_id": "42e1bc89a6594fb5a17bb9629de8856e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -593,12 +620,12 @@
     "# tokenized_common_voice = small_common_voice.map(prepare_dataset)\n",
     "\n",
     "# 完整数据训练，尝试开启 `num_proc=8` 参数多进程并行处理（如阻塞无法运行，则不使用此参数）\n",
-    "tokenized_common_voice = common_voice.map(prepare_dataset, num_proc=8)"
+    "tokenized_common_voice = small_common_voice.map(prepare_dataset,remove_columns=common_voice.column_names[\"train\"], num_proc=8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "76646516-06e2-4700-92fe-4fbb87587e31",
    "metadata": {
     "execution": {
@@ -614,23 +641,47 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['audio', 'sentence', 'input_features', 'labels'],\n",
+       "        features: ['input_features', 'labels'],\n",
        "        num_rows: 29056\n",
        "    })\n",
        "    validation: Dataset({\n",
-       "        features: ['audio', 'sentence', 'input_features', 'labels'],\n",
+       "        features: ['input_features', 'labels'],\n",
        "        num_rows: 10581\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tokenized_common_voice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bb0fe6c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['input_features', 'labels'],\n",
+       "    num_rows: 29056\n",
+       "})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenized_common_voice[\"train\"]"
    ]
   },
   {
@@ -648,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "4c89ffcf-c805-48c2-b7d3-ae01b687178c",
    "metadata": {
     "execution": {
@@ -695,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "a26a6b4d-5370-4a48-936a-84739ac0cc2f",
    "metadata": {
     "execution": {
@@ -725,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "f9fcb121-fa5c-4c30-8bdc-9ab08ab75427",
    "metadata": {
     "execution": {
@@ -735,24 +786,16 @@
      "shell.execute_reply.started": "2024-07-17T03:34:51.195217Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from transformers import AutoModelForSpeechSeq2Seq\n",
+    "from transformers import AutoModelForSpeechSeq2Seq,BitsAndBytesConfig\n",
     "\n",
-    "model = AutoModelForSpeechSeq2Seq.from_pretrained(model_name_or_path, load_in_8bit=True, device_map=\"auto\")"
+    "model = AutoModelForSpeechSeq2Seq.from_pretrained(model_name_or_path, quantization_config=BitsAndBytesConfig(load_in_8bit=True), device_map=\"auto\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "2cb016f1-e6e9-4fd8-9c8b-72fd23be92d3",
    "metadata": {
     "execution": {
@@ -788,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "1ee34359-fe1b-48f1-827c-6a8ec4a53af7",
    "metadata": {
     "execution": {
@@ -834,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "cdf6bc9c-6d2c-4dbf-b09e-a89cb1041c46",
    "metadata": {
     "execution": {
@@ -869,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "7a8f9dc5-6e15-4f16-9ac5-e7492356fe88",
    "metadata": {
     "execution": {
@@ -886,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "b74c7508-e6f4-42d8-8aaf-fe83c5977c35",
    "metadata": {
     "execution": {
@@ -940,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "11f259c8-dbcf-4a7f-bbb5-821ab104efee",
    "metadata": {
     "execution": {
@@ -968,10 +1011,10 @@
     "    output_dir=model_dir,  # 指定模型输出和保存的目录\n",
     "    per_device_train_batch_size=batch_size,  # 每个设备上的训练批量大小\n",
     "    learning_rate=1e-3,  # 学习率\n",
-    "    num_train_epochs=1,  # 训练的总轮数\n",
+    "    num_train_epochs=3,  # 训练的总轮数\n",
     "    evaluation_strategy=\"epoch\",  # 设置评估策略，这里是在每个epoch结束时进行评估\n",
-    "    # warmup_steps=50,  # 在训练初期增加学习率的步数，有助于稳定训练\n",
-    "    # fp16=True,  # 启用混合精度训练，可以提高训练速度，同时减少内存使用\n",
+    "    warmup_steps=50,  # 在训练初期增加学习率的步数，有助于稳定训练\n",
+    "    fp16=True,  # 启用混合精度训练，可以提高训练速度，同时减少内存使用\n",
     "    per_device_eval_batch_size=batch_size,  # 每个设备上的评估批量大小\n",
     "    generation_max_length=128,  # 生成任务的最大长度\n",
     "    logging_steps=10,  # 指定日志记录的步骤，用于跟踪训练进度\n",
@@ -992,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "f8a52ed7-cae0-4aba-818e-87717430d908",
    "metadata": {
     "execution": {
@@ -1019,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "6973bed7-8f53-4d55-966c-f037941e5ef3",
    "metadata": {
     "execution": {
@@ -1048,8 +1091,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='454' max='454' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [454/454 2:18:23, Epoch 1/1]\n",
+       "      <progress value='2724' max='2724' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [2724/2724 5:53:27, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1062,8 +1105,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.328900</td>\n",
-       "      <td>0.385575</td>\n",
+       "      <td>0.370900</td>\n",
+       "      <td>0.411979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.367000</td>\n",
+       "      <td>0.389107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.264300</td>\n",
+       "      <td>0.384179</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -1076,14 +1129,61 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/bitsandbytes/autograd/_functions.py:316: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/bitsandbytes/autograd/_functions.py:316: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/bitsandbytes/autograd/_functions.py:316: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/bitsandbytes/autograd/_functions.py:316: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/lib/python3.12/site-packages/bitsandbytes/autograd/_functions.py:316: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=454, training_loss=0.37944477507721486, metrics={'train_runtime': 8324.5252, 'train_samples_per_second': 3.49, 'train_steps_per_second': 0.055, 'total_flos': 6.1773119225856e+19, 'train_loss': 0.37944477507721486, 'epoch': 1.0})"
+       "TrainOutput(global_step=2724, training_loss=0.3279282967074502, metrics={'train_runtime': 21217.3159, 'train_samples_per_second': 4.108, 'train_steps_per_second': 0.128, 'total_flos': 1.85319357677568e+20, 'train_loss': 0.3279282967074502, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
+      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
+      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
+      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+     ]
     }
    ],
    "source": [
@@ -1460,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "89f49787-6ab4-4bc1-91b8-a1c104c9feaf",
    "metadata": {
     "execution": {
@@ -1477,7 +1577,7 @@
        "'这是一段测试用于WhisperLarge V2模型的自动语音识别测试。'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
